// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsonSchemaToMongoSchema > should convert documentContents schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "content": {
      "additionalProperties": {},
      "bsonType": "object",
      "description": "Contenu du document",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "document_id": {
      "bsonType": "string",
      "description": "Identifiant du document",
    },
    "type_document": {
      "bsonType": "string",
      "description": "Le type de document (exemple: DECA, etc..)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "document_id",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert documents schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "added_by": {
      "bsonType": "string",
      "description": "Qui a ajouté le fichier",
    },
    "chemin_fichier": {
      "bsonType": "string",
      "description": "Chemin du fichier binaire",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "ext_fichier": {
      "bsonType": "string",
      "description": "Le type de fichier extension",
      "enum": [
        "xlsx",
        "xls",
        "csv",
      ],
    },
    "hash_fichier": {
      "bsonType": "string",
      "description": "Checksum fichier",
    },
    "hash_secret": {
      "bsonType": "string",
      "description": "Hash fichier",
    },
    "import_progress": {
      "bsonType": "int",
      "description": "Progress percentage (-1 not started)",
    },
    "lines_count": {
      "bsonType": "number",
      "description": "Number of lines",
    },
    "nom_fichier": {
      "bsonType": "string",
      "description": "Le nom de fichier",
    },
    "taille_fichier": {
      "bsonType": "int",
      "description": "Taille du fichier en bytes",
    },
    "type_document": {
      "bsonType": "string",
      "description": "Le type de document (exemple: DECA, etc..)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "type_document",
    "ext_fichier",
    "nom_fichier",
    "chemin_fichier",
    "taille_fichier",
    "hash_secret",
    "hash_fichier",
    "added_by",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert events schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "name": {
      "bsonType": "string",
      "description": "Nom de l'évènement",
    },
    "payload": {
      "additionalProperties": false,
      "bsonType": "object",
      "description": "Payload de l'évènement",
      "properties": {
        "emails": {
          "bsonType": "array",
          "items": {
            "additionalProperties": false,
            "bsonType": "object",
            "properties": {
              "error": {
                "bsonType": "array",
                "items": {
                  "additionalProperties": false,
                  "bsonType": "object",
                  "properties": {
                    "err_type": {
                      "bsonType": "string",
                      "enum": [
                        "fatal",
                        "soft_bounce",
                        "hard_bounce",
                        "complaint",
                        "invalid_email",
                        "blocked",
                        "error",
                      ],
                    },
                    "message": {
                      "bsonType": "string",
                    },
                  },
                  "required": [
                    "err_type",
                    "message",
                  ],
                },
              },
              "messageIds": {
                "anyOf": [
                  {
                    "anyOf": [
                      {
                        "not": {},
                      },
                      {
                        "bsonType": "array",
                        "items": {
                          "bsonType": "string",
                        },
                      },
                    ],
                  },
                  {
                    "bsonType": "null",
                  },
                ],
              },
              "openDate": {
                "bsonType": "date",
              },
              "payload": {
                "additionalProperties": false,
                "bsonType": "object",
                "properties": {
                  "recipient": {
                    "additionalProperties": false,
                    "bsonType": "object",
                    "properties": {
                      "email": {
                        "bsonType": "string",
                      },
                    },
                    "required": [
                      "email",
                    ],
                  },
                },
                "required": [
                  "recipient",
                ],
              },
              "sendDates": {
                "bsonType": "array",
                "items": {
                  "bsonType": "date",
                },
              },
              "templateName": {
                "bsonType": "string",
              },
              "token": {
                "bsonType": "string",
              },
            },
            "required": [
              "token",
              "templateName",
              "payload",
              "sendDates",
            ],
          },
        },
        "unsubscribe": {
          "bsonType": "bool",
          "description": "unsubscribe email",
        },
      },
      "required": [
        "emails",
      ],
    },
    "person_id": {
      "bsonType": "string",
      "description": "Identifiant de la personne",
    },
  },
  "required": [
    "_id",
    "person_id",
    "name",
    "payload",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert jobs schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "ended_at": {
      "bsonType": "date",
      "description": "Date de fin d'execution",
    },
    "name": {
      "bsonType": "string",
      "description": "Le nom de la tâche",
    },
    "output": {
      "additionalProperties": {},
      "bsonType": "object",
      "description": "Les valeurs de retours du job",
    },
    "payload": {
      "additionalProperties": {},
      "bsonType": "object",
      "description": "La donnée liéé à la tâche",
    },
    "scheduled_at": {
      "bsonType": "date",
      "description": "Date de lancement programmée",
    },
    "started_at": {
      "bsonType": "date",
      "description": "Date de lancement",
    },
    "status": {
      "bsonType": "string",
      "description": "Statut courant du job",
      "enum": [
        "pending",
        "will_start",
        "running",
        "finished",
        "blocked",
        "errored",
      ],
    },
    "sync": {
      "bsonType": "bool",
      "description": "Si le job est synchrone",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "name",
    "status",
    "sync",
    "scheduled_at",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert organisations schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "_meta": {
      "additionalProperties": {},
      "bsonType": "object",
      "description": "Métadonnées",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email_domains": {
      "bsonType": "array",
      "description": "Liste des domaines email",
      "items": {
        "bsonType": "string",
      },
    },
    "etablissements": {
      "bsonType": "array",
      "description": "Liste des établissements",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "is_close": {
            "bsonType": "bool",
            "description": "Est fermé",
          },
          "is_hq": {
            "bsonType": "bool",
            "description": "Siège social",
          },
          "nom": {
            "bsonType": "string",
            "description": "Nom de l'établissement",
          },
          "siret": {
            "bsonType": "string",
            "description": "Siret actif de l'établissement",
          },
        },
        "required": [
          "nom",
          "siret",
          "is_hq",
          "is_close",
        ],
      },
    },
    "nom": {
      "bsonType": "string",
      "description": "Nom de l'organisation",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert persons schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "_meta": {
      "additionalProperties": {},
      "bsonType": "object",
      "description": "Métadonnées",
    },
    "civility": {
      "bsonType": "string",
      "description": "civilité",
      "enum": [
        "Madame",
        "Monsieur",
      ],
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de la personne",
    },
    "nom": {
      "bsonType": "string",
      "description": "Le nom de la personne",
    },
    "organisation_id": {
      "bsonType": "string",
      "description": "Identifiant de l'organisation",
    },
    "prenom": {
      "bsonType": "string",
      "description": "Le prénom de la personne",
    },
    "sirets": {
      "anyOf": [
        {
          "bsonType": "array",
          "items": {
            "bsonType": "string",
          },
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Liste de sirets recensé (sécurisation qualité de la donnée)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "organisation_id",
    "_meta",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert sessions schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "token": {
      "bsonType": "string",
      "description": "Token de la session",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "token",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`jsonSchemaToMongoSchema > should convert users schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "api_key": {
      "bsonType": "string",
      "description": "Clé API",
    },
    "api_key_used_at": {
      "anyOf": [
        {
          "anyOf": [
            {
              "not": {},
            },
            {
              "bsonType": "date",
            },
          ],
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Date de dernière utilisation de la clé API",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "is_admin": {
      "bsonType": "bool",
      "description": "Est administrateur",
    },
    "password": {
      "bsonType": "string",
      "description": "Mot de passe de l'utilisateur",
      "minLength": 8,
    },
    "person_id": {
      "bsonType": "string",
      "description": "Identifiant de la personne",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "password",
    "person_id",
    "updated_at",
    "created_at",
  ],
}
`;
